// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenceHeader renders if is isB2cPartnershipLicence 1`] = `
<h1 class="ncf__header ncf__center">
  Welcome to the Financial Times
</h1>
<div class="ncf__center">
  <div>
    Have you already joined the  account?
  </div>
</div>
`;

exports[`LicenceHeader renders if is trial 1`] = `
<h1 class="ncf__header ncf__center">
  Start your free trial
</h1>
`;

exports[`LicenceHeader renders if url is defined 1`] = `
<h1 class="ncf__header ncf__center">
  Great news!  has an FT Subscription you can join
</h1>
<div class="ncf__center">
  <div>
    Have you already joined the  account?
  </div>
  <div>
    <a href="https://mytest.com"
       class="ncf__button--secondary"
    >
      Sign in
    </a>
  </div>
</div>
`;

exports[`LicenceHeader renders with custom display name 1`] = `
<h1 class="ncf__header ncf__center">
  Great news! Display name text has an FT Subscription you can join
</h1>
<div class="ncf__center">
  <div>
    Have you already joined the Display name text account?
  </div>
</div>
`;

exports[`LicenceHeader renders with custom welcome text (that requires escaping, e.g. ampersand) 1`] = `
<h1 class="ncf__header ncf__center">
  Great news!  has an FT Subscription you can join
</h1>
<div class="ncf__center">
  <div>
    Have you already joined the  account?
  </div>
</div>
<p>
  Welcome text & some more welcome text
</p>
`;

exports[`LicenceHeader renders with default props 1`] = `
<h1 class="ncf__header ncf__center">
  Great news!  has an FT Subscription you can join
</h1>
<div class="ncf__center">
  <div>
    Have you already joined the  account?
  </div>
</div>
`;
